# snyk1

./: .snyk  LICENSE  main.py  package.json  pyproject.toml  requirements.txt
